# budget_calculator_api

./: .env  .gitignore  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  compose.yaml  db.sqlite3  initial_dump.py  insert_into_db.py  main.py  manage.py  requirements.txt  requirements_test.txt  requirments.txt  setup.cfg  setup.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 001_initial_migrations.py  ffac1b7e140b_initial_migrations.py
api/: admin.py  main.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/core/: __init__.py  security.py
api/db/: database.py  models.py  users.py
api/exceptions/: exc_handlers.py
api/migrations/: 0001_initial.py  0002_auto_20220504_1939.py  0002_auto_20220516_1233.py
api/repositories/: base_repository.py  category_repository.py  currency_repository.py  record_repository.py  user_repository.py
api/routers/: auth.py  categories.py  currency.py  records.py  users.py
api/schemas/: auth.py  category_schemas.py  currency_schemas.py  record_schemas.py  user_schemas.py
api/services/: base_service.py  category_service.py  currency_service.py  record_service.py  user_service.py
api/utils/: dependencies.py  uow.py
bot/: Dockerfile  bot.py  buttons.py  main.py  requirements.txt  test_bot.py  user.py  variables.py
compose/: Dockerfile  docker-compose.yaml  requirements.txt
plus_balance/: settings.py  urls.py  wsgi.py
tests/: conftest.py  test_auth.py  test_categories.py  test_currency.py  test_index.py  test_records.py  test_users.py
(+5 files in other folders)
