[metadata]
name = plus_balance
classifier =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = plus_balance

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = true
skip_changelog = true
skip_authors = true
skip_reno = true

[pycodestyle]
max-line-length = 80
